# rocSHMEM

./: CMakeLists.txt  README.md
scripts/: install_dependencies.sh
